# pidgin-plus

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac  unittest
doc/: buildforwin.txt  examples.txt  gradienti.txt
plus/: Makefile.am  Makefile.mingw  plus.c
test/: Makefile  test  test.c
win32/: pidgin-plus.nsi
